Switched account lookup handler to use json data instead of form data
